1998-08-06  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin): When adding branch, if there is a lock on
	the branchpoint owned by someone else, leave it alone.  This
	restores CVS 1.9 (RCS 5.7) behavior, fixing a core dump.
	* sanity.sh (reserved): New tests reserved-16 through reserved-19
	test for this fix.

1998-08-05  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Use ${QUESTION} not "?".
	This makes it work with GNU expr 1.12 as well as 1.16.

Sun Aug  2 20:27:44 1998  Noel Cragg  <noel@swish.red-bean.com>

	* mkmodules.c: add comment about TopLevelAdmin for the initial
 	contents of CVSROOT/config.

1998-07-29  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin): Only try to call xreadlink if HAVE_READLINK
	is defined.

Tue Jul 28 19:33:08 1998  Noel Cragg  <noel@swish.red-bean.com>

	* version.c: Change version number to 1.9.29.

	* rcs.c (RCS_checkin): add code to follow symbolic links in the
 	repository.

Sun Jul 26 05:14:41 1998  Noel Cragg  <noel@swish.red-bean.com>

	* This set of changes reverts the code to pre-1.9.2 behavior and
 	does not create CVS directories at top-level (except for the
 	obvious "cvs co .").  Added a new configuration option to switch
 	between 1.9 and 1.9.2 behavior.
	
	* recurse.c (do_argument_proc): new function.
	(start_recursion): in the case that we've done a command from
 	top-level but have no CVS directory there, the behavior should be
 	the same as "cvs <cmd> dir1 dir2 dir3...".  Make sure that the
 	appropriate "Argument" commands are sent to the server by calling
 	walklist with do_argument_proc.
 
	* client.c (call_in_directory): only create the top-level CVS
 	directory when we're checking out "." explicitly.  The server will
 	force creation of this directory in all other cases.

	* checkout.c (checkout_proc): only generate the top-level
 	directory when the TopLevelAdmin=yes.  Also send a message to the
 	client to do the same.
